heatmap done just fix the spacing of it

--- a/DSP_bakery/static/css/main.css
+++ b/DSP_bakery/static/css/main.css
@@ -178,7 +178,7 @@ p{
     width: 108vh;
     margin-top:30px;
     /* margin-bottom: 20px; use this for the last card to give space for the bottom of the page */
-    height:58vh;
+    height:60vh;
     float:inline-start;
 }
 
